# test-pytest-ruff

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/hello/: ruff.py
